# HomeReef

./: .gitignore  Makefile  README.md  rename_script.py
brinecrypt/: Dockerfile.prod  README.md  build.sh  docker-compose.yaml  go.mod  go.sum  run.sh  test.sh
brinecrypt/app/: .containerignore
brinecrypt/app/src/: kube_broadcast.py  pyproject.toml
brinecrypt/app/src/controllers/: bootstrap_controller.py
brinecrypt/app/src/data/: data_manager.py
brinecrypt/app/src/data/model/: data_object.py
brinecrypt/app/src/data/providers/: data_provider.py
brinecrypt/app/src/data/providers/database/: configuration.py  handler.py
brinecrypt/app/src/data/providers/database/sql/: engine.py  generate_ddl.py  orm_models.py
brinecrypt/app/src/data/providers/database/sql/v1/: migrate.py
brinecrypt/app/src/data/providers/database/sql/v2/: migrate.py
brinecrypt/app/src/data/providers/local/: file_manager.py
brinecrypt/app/src/data/providers/remote/: remote_manager.py
brinecrypt/app/src/misc/: configuration.py
brinecrypt/app/src/server/: server.py
brinecrypt/app/src/server/router/: bootstrap.py  credentials.py  env.py
brinecrypt/containerfiles/: kube-broadcast
containerfiles/: compose-nas.yml  compose.yml
seaglass/: LICENSE  Makefile  README.md  build.sh  test.html  upload-container.sh
seaglass/containerfiles/: local-test-seaglass.yml
seaglass/src/: app.py
spyglass/: build.sh  test.html
spyglass/containerfiles/: Containerfile  (+1 more)
transcoder/: upload-container.sh
transflux/: .env  Makefile  build.sh  pyproject.toml  upload-container.sh
(+81 files in other folders)
