[project]
name = "kube-broadcast"
version = "0.0.1"
description = "REST API Server for Secrets & Kube Data"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "watchdog>=3.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}
packages = ["data", "data.managers", "data.model", "data.model.python", "data.model.sql", "server", "server.router", "server.model", "misc"]

[tool.ruff.lint]
# select = ["ANN"]

[tool.pytest.ini_options]
testpaths = ["tests", "data/tests"]
python_files = "test_*.py"
python_functions = "test_*"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
